# psycopg-vcrlike

./: README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
psycopg_vcrlike/: __init__.py  _aio_fileutils_aiofile.py  _aio_fileutils_aiofiles.py  _aio_fileutils_builtin.py
tests/: conftest.py  test_async_postgresql.py  test_cancellation.py  test_http.py  test_smoke.py
tests/cassettes/test_cancellation/: test_cancellation_earlier.psycopg.yml  test_cancellation_later.psycopg.yml  test_cancellation_sanity.psycopg.yml
tests/cassettes/test_http/: test_smoke_aiohttp.yaml
tests/cassettes/test_smoke/: test_fetchall.psycopg.yml  test_fetchone.psycopg.yml
