[project]
name = "psycopg_vcrlike"
version = "0.0.1"
authors = [
  { name="Alexander Sosedkin", email="monk@unboiled.info" },
]
description = "Something like pyvcr and python-recording, but for recording SQL queries."
urls.homepage = "https://github.com/t184256/psycopg-vcrlike"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.11"
dependencies = [
  "psycopg >= 3.1",
  "psycopg_pool >= 3.1",
  "aiofiles >= 23",
  "pytest >= 7.4", "pytest-recording >= 0.13.0",
  "ruamel.yaml >= 0.18",
]
optional-dependencies.test = [
  "types-aiofiles >= 23.2",
  "pytest-asyncio >= 0.21", "pytest-postgresql >= 5",
  "coverage >= 7", "pytest-cov >= 4",
  "mypy >= 1.7", "pytest-mypy >= 0.10",
  "ruff >= 0.1.4",
]

[project.entry-points."pytest11"]
psycopg_vcrlike = "psycopg_vcrlike"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--mypy --doctest-modules"
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
preview = true
select = [ "ALL" ]
ignore = [
  "ANN101",  # missing-type-self
  "ANN102",  # missing-type-cls
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
]
per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
flake8-quotes.inline-quotes = "single"
flake8-quotes.multiline-quotes = "single"
flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: 2023 Alexander Sosedkin <monk@unboiled.info>\n# SPDX-License-Identifier: GPL-3.0\n'

[tool.ruff.format]
quote-style = "single"
preview = true
